Wrap text to avoid overflow when there are many items in the dataset fields

--- a/ckanext/knowledgehub/fanstatic/less/_datasets.less
+++ b/ckanext/knowledgehub/fanstatic/less/_datasets.less
@@ -20,6 +20,9 @@ header.module-content.page-header {
   background: @brand-primary-25;
   border-top-color: @brand-primary-50;
 }
+.text-word-wrap {
+    overflow-wrap: break-word;
+}
 
 .dataset-list {
   .flex;
